# C-Programming-A-Modern-Approach

./: CMakeLists.txt  challenge.txt
chapter-2/: CMakeLists.txt
chapter-2/inc/: book.h  constants.h
chapter-2/src/: book.c  main.c  test_book.c
chapter-2/test/: unit_book.c
